// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CharProducer <- #@@iterator() 1`] = `"c"`;

exports[`CharProducer <- #@@iterator() 2`] = `"b"`;

exports[`CharProducer <- #@@iterator() 3`] = `"a"`;

exports[`CharProducer <- #next() 1`] = `
Object {
  "done": false,
  "value": "c",
}
`;

exports[`CharProducer <- #next() 2`] = `
Object {
  "done": false,
  "value": "b",
}
`;

exports[`CharProducer <- #next() 3`] = `
Object {
  "done": false,
  "value": "a",
}
`;

exports[`CharProducer <- #next() 4`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`CharProducer -> #@@iterator() 1`] = `"a"`;

exports[`CharProducer -> #@@iterator() 2`] = `"b"`;

exports[`CharProducer -> #@@iterator() 3`] = `"c"`;

exports[`CharProducer -> #next() 1`] = `
Object {
  "done": false,
  "value": "a",
}
`;

exports[`CharProducer -> #next() 2`] = `
Object {
  "done": false,
  "value": "b",
}
`;

exports[`CharProducer -> #next() 3`] = `
Object {
  "done": false,
  "value": "c",
}
`;

exports[`CharProducer -> #next() 4`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`NumberProducer <- #@@iterator() 1`] = `3`;

exports[`NumberProducer <- #@@iterator() 2`] = `2`;

exports[`NumberProducer <- #@@iterator() 3`] = `1`;

exports[`NumberProducer <- #constructor() 1`] = `
NumberProducer {
  "end": 1,
  "size": 3,
  "start": 3,
  "state": 3,
  "step": -1,
}
`;

exports[`NumberProducer <- #constructor() 2`] = `
NumberProducer {
  "end": 1,
  "size": Infinity,
  "start": 9007199254740991,
  "state": 9007199254740991,
  "step": -1,
}
`;

exports[`NumberProducer <- #next() 1`] = `
Object {
  "done": false,
  "value": 3,
}
`;

exports[`NumberProducer <- #next() 2`] = `
Object {
  "done": false,
  "value": 2,
}
`;

exports[`NumberProducer <- #next() 3`] = `
Object {
  "done": false,
  "value": 1,
}
`;

exports[`NumberProducer <- #next() 4`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`NumberProducer -> #@@iterator() 1`] = `1`;

exports[`NumberProducer -> #@@iterator() 2`] = `2`;

exports[`NumberProducer -> #@@iterator() 3`] = `3`;

exports[`NumberProducer -> #constructor() 1`] = `
NumberProducer {
  "end": 9007199254740991,
  "size": Infinity,
  "start": 0,
  "state": 0,
  "step": 1,
}
`;

exports[`NumberProducer -> #constructor() 2`] = `
NumberProducer {
  "end": 9007199254740991,
  "size": Infinity,
  "start": 1,
  "state": 1,
  "step": 1,
}
`;

exports[`NumberProducer -> #constructor() 3`] = `
NumberProducer {
  "end": 3,
  "size": 3,
  "start": 1,
  "state": 1,
  "step": 1,
}
`;

exports[`NumberProducer -> #constructor() 4`] = `
NumberProducer {
  "end": 9007199254740991,
  "size": Infinity,
  "start": 1,
  "state": 1,
  "step": 1,
}
`;

exports[`NumberProducer -> #constructor() 5`] = `
NumberProducer {
  "done": true,
  "end": 0,
  "size": NaN,
  "start": 0,
  "state": 0,
  "step": 0,
}
`;

exports[`NumberProducer -> #next() 1`] = `
Object {
  "done": false,
  "value": 1,
}
`;

exports[`NumberProducer -> #next() 2`] = `
Object {
  "done": false,
  "value": 2,
}
`;

exports[`NumberProducer -> #next() 3`] = `
Object {
  "done": false,
  "value": 3,
}
`;

exports[`NumberProducer -> #next() 4`] = `
Object {
  "done": true,
  "value": undefined,
}
`;
